<resources>
    <string name="app_name">De Temporada</string>
    <string name="title_activity_scrolling">Scrolling</string>

    <!-- Títulos -->
    <string name="titulo_valores_nutricionales">Nutrition facts</string>
    <string name="titulo_calidades_por_mes">Seasonality chart</string>

    <!-- Categorías -->
    <string name="categoria_11">Top this month</string>
    <string name="categoria_10">At its best</string>
    <string name="categoria_5">Coming in</string>
    <string name="categoria_0">Out of season</string>

    <!-- Meses -->
    <string name="mes_1">January</string>
    <string name="mes_2">February</string>
    <string name="mes_3">March</string>
    <string name="mes_4">April</string>
    <string name="mes_5">May</string>
    <string name="mes_6">June</string>
    <string name="mes_7">July</string>
    <string name="mes_8">August</string>
    <string name="mes_9">September</string>
    <string name="mes_10">October</string>
    <string name="mes_11">November</string>
    <string name="mes_12">December</string>

    <string name="mes_corto_1">Jan</string>
    <string name="mes_corto_2">Feb</string>
    <string name="mes_corto_3">Mar</string>
    <string name="mes_corto_4">Apr</string>
    <string name="mes_corto_5">May</string>
    <string name="mes_corto_6">Jun</string>
    <string name="mes_corto_7">Jul</string>
    <string name="mes_corto_8">Aug</string>
    <string name="mes_corto_9">Sep</string>
    <string name="mes_corto_10">Oct</string>
    <string name="mes_corto_11">Nov</string>
    <string name="mes_corto_12">Dec</string>

    <!-- Alimentos -->
    <string name="alim_acelga">Chard</string>
    <string name="alim_aguacate">Avocado</string>
    <string name="alim_batata">Sweet potato</string>
    <string name="alim_brocoli">Broccoli</string>
    <string name="alim_cardo">Thistle</string>
    <string name="alim_champiñon">Mushroom</string>
    <string name="alim_kiwi">Kiwi</string>
    <string name="alim_lima">Lime</string>
    <string name="alim_limon">Lemon</string>
    <string name="alim_mandarina">Tangerine</string>
    <string name="alim_manzana">Apple</string>
    <string name="alim_naranja">Orange</string>
    <string name="alim_pera">Pear</string>

    <!-- Propiedades del alimento -->
    <string name="imagen_alimento">Product image</string>
    <string name="calorias">Calories</string>
    <string name="carbohidratos">Carbs</string>
    <string name="proteinas">Proteins</string>
    <string name="grasas">Fats</string>

    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="idioma">Language</string>
    <string-array name="pref_example_list_titles">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>es</item>
        <item>en</item>
    </string-array>
</resources>
