<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="es.jota.detemporada.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:showDividers="middle"
        android:divider="?android:dividerHorizontal">

        <RelativeLayout
            android:id="@+id/panel_nutricional"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/titulo_valores_nutricionales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_valores_nutricionales"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingTop="16dp"
                style="@style/titulo"/>

            <TextView
                android:id="@+id/texto_calorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/calorias"
                android:layout_below="@id/titulo_valores_nutricionales"
                style="@style/textoPropiedadAlimento" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/carbohidratos"
                android:layout_below="@id/titulo_valores_nutricionales"
                style="@style/textoPropiedadAlimento" />

            <TextView
                android:id="@+id/valor_calorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/texto_calorias"
                style="@style/propiedadAlimento" />

            <TextView
                android:id="@+id/valor_carbohidratos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/texto_calorias"
                style="@style/propiedadAlimento" />

            <TextView
                android:id="@+id/texto_proteinas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/valor_calorias"
                android:text="@string/proteinas"
                style="@style/textoPropiedadAlimento" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/valor_calorias"
                android:text="@string/grasas"
                style="@style/textoPropiedadAlimento" />

            <TextView
                android:id="@+id/valor_proteinas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/texto_proteinas"
                style="@style/propiedadAlimento" />

            <TextView
                android:id="@+id/valor_grasas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/texto_proteinas"
                style="@style/propiedadAlimento" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_calidades_por_mes"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:paddingTop="16dp"
                style="@style/titulo"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="-16dp"
                android:layout_marginStart="-16dp"
                android:layout_marginEnd="-16dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
